@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2014-08-27 Doug	
+	* Add photon systematics
+	
 2014-07-30 Doug	
 	* Add methods for the monojet analysis
 	
